--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.datasource.initialize=true
-spring.datasource.url=jdbc:h2:mem:movie
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.open-in-view=false
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_director?characterEncoding=UTF8&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
 
-
-spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
